--- a/extension/popup.html
+++ b/extension/popup.html
@@ -52,6 +52,17 @@
         font-size: 0.9rem;
         box-sizing: border-box;
       }
+      .override-input {
+        width: 100%;
+        padding: 8px;
+        margin-top: 10px;
+        border: 1px solid #404040;
+        border-radius: 8px;
+        background-color: #2d2d2d;
+        color: #e0e0e0;
+        font-size: 0.9rem;
+        box-sizing: border-box;
+      }
       .actor-input:focus {
         outline: none;
         border-color: #3b82f6;
@@ -179,8 +190,18 @@
 <body>
   <div class="container">
     <h2>Send Video Info via MQTT</h2>
+    <div style="margin-bottom: 10px;">
+      <input type="text" id="actorInput" class="actor-input" placeholder="Enter actor name">
+      <div style="display: flex; gap: 5px;">
+        <input type="text" class="override-input" id="ollamaModel" value="qwen3:latest" placeholder="ollamaModel">
+        <input type="text" class="override-input" id="ollamaHostPort" value="localhost:11434" placeholder="ollamaHost:port">
+      </div>
+      <div style="display: flex; gap: 5px; margin-top: 2px;">
+        <input type="text" class="override-input" id="mTopic" value="vsong" placeholder="topic">
+        <input type="text" class="override-input" id="mqttHostPort" value="192.168.12.222:8083" placeholder="mqttHost:port">
+      </div>
+    </div>
     <button id="sendButton">Get & Send</button>
-    <input type="text" id="actorInput" class="actor-input" placeholder="Enter actor name">
     <div class="tab-container">
       <div class="tab-buttons">
         <button class="tab-button active" data-tab="status">Status Log</button>
