--- a/extension/popup.html
+++ b/extension/popup.html
@@ -63,6 +63,17 @@
         font-size: 0.9rem;
         box-sizing: border-box;
       }
+      .resolution-select {
+        padding: 8px;
+        margin-top: 10px;
+        border: 1px solid #404040;
+        border-radius: 8px;
+        background-color: #2d2d2d;
+        color: #e0e0e0;
+        font-size: 0.9rem;
+        box-sizing: border-box;
+        min-width: 110px;
+      }
       .actor-input:focus {
         outline: none;
         border-color: #3b82f6;
@@ -191,12 +202,19 @@
   <div class="container">
     <h2>Send Video Info via MQTT</h2>
     <div style="margin-bottom: 10px;">
-      <input type="text" id="actorInput" class="actor-input" placeholder="Enter actor name">
+      <div style="display: flex; gap: 8px; align-items: center;">
+        <input type="text" id="actorInput" class="actor-input" placeholder="Enter actor name">
+        <select id="resolutionSelect" class="resolution-select" title="Select resolution">
+          <option value="2160">2160</option>
+          <option value="1440">1440</option>
+          <option value="1080" selected>1080</option>
+        </select>
+      </div>
       <div style="display: flex; gap: 5px;">
         <input type="text" class="override-input" id="ollamaModel" value="qwen3:latest" placeholder="ollamaModel">
         <input type="text" class="override-input" id="ollamaHostPort" value="localhost:11434" placeholder="ollamaHost:port">
       </div>
-      <div style="display: flex; gap: 5px; margin-top: 2px;">
+      <div style="display: flex; gap: 5px;">
         <input type="text" class="override-input" id="mTopic" value="vsong" placeholder="topic">
         <input type="text" class="override-input" id="mqttHostPort" value="192.168.12.111:8083" placeholder="mqttHost:port">
       </div>
