--- a/extension/popup.html
+++ b/extension/popup.html
@@ -34,12 +34,23 @@
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
       }
       button:hover {
-        /* background-color: #2563eb; */
+        background-color: #2563eb;
         transform: translateY(-2px);
       }
       button:active {
         transform: translateY(0);
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+      }
+      button:disabled {
+        background-color: #4b5563;
+        cursor: not-allowed;
+        opacity: 0.6;
+        transform: none;
+        box-shadow: none;
+      }
+      button:disabled:hover {
+        background-color: #4b5563;
+        transform: none;
       }
       .actor-input {
         width: 100%;
@@ -224,7 +235,11 @@
         <input type="text" class="override-input" id="mqttHostPort" value="192.168.12.111:8083" placeholder="mqttHost:port">
       </div>
     </div>
-    <button id="sendButton">Get & Send</button>
+    <div style="display: flex; gap: 8px; margin-bottom: 10px;">
+      <button id="extractButton" style="flex: 1;">1. Extract</button>
+      <button id="processButton" style="flex: 1;" disabled>2. Process AI</button>
+      <button id="sendButton" style="flex: 1;" disabled>3. Send MQTT</button>
+    </div>
     <div class="tab-container">
       <div class="tab-buttons">
         <button class="tab-button active" data-tab="status">Status Log</button>
@@ -236,10 +251,10 @@
           <textarea id="mqttStatus" readonly></textarea>
         </div>
         <div class="tab-pane" id="extractedTab">
-          <textarea id="extractedData"></textarea>
+          <textarea id="extractedData" readonly></textarea>
         </div>
         <div class="tab-pane" id="finalTab">
-          <textarea id="finalJsonBox" readonly></textarea>
+          <textarea id="finalJsonBox"></textarea>
         </div>
       </div>
     </div>
