--- a/extension/popup.html
+++ b/extension/popup.html
@@ -236,9 +236,9 @@
       </div>
     </div>
     <div style="display: flex; gap: 8px; margin-bottom: 10px;">
-      <button id="extractButton" style="flex: 1;">1. Extract</button>
-      <button id="processButton" style="flex: 1;" disabled>2. Process AI</button>
-      <button id="sendButton" style="flex: 1;" disabled>3. Send MQTT</button>
+      <button id="extractButton" style="flex: 1; background-color: #059669;">1. Extract</button>
+      <button id="processButton" style="flex: 1; background-color: yellowgreen; color: #2563eb;" disabled>2. Process AI</button>
+      <button id="sendButton" style="flex: 1; background-color: tomato; color: #2563eb;" disabled>3. Send MQTT</button>
     </div>
     <div class="tab-container">
       <div class="tab-buttons">
